--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
     <body>
         <h1>Agenda Web</h1>
         <script src="script.js"></script>
+	<p>Jordi Morros Sans, Modificacio punt 49</p>
     </body>
 </html>
